<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminHomeActivity">

    <Spinner
        android:id="@+id/events_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/select_event" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Select Date"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/pick_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time" />

    <Button
        android:id="@+id/admin_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />

    <Button
        android:id="@+id/admin_btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/summary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Summary" />

</LinearLayout>